kubernetes/apps/media/dispatcharr/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.greyrock.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dispatcharr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dispatcharr
      app.kubernetes.io/instance: dispatcharr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: emby
      toPorts:
        - ports:
            - port: "9191"
              protocol: TCP
